--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 */
 body {
   /* Location of the image */
-  background-image: url(images/background-photo.jpg);
+  background-image: url(images/background-photo01.jpg);
   
   /* Image is centered vertically and horizontally at all times */
   background-position: center center;
